MDEV-23680 Assertion `data' failed in crcr32_calc_pclmulqdq

Fix DBUG_ASSERT